--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -22,6 +22,10 @@ p {
   margin-top: .5em; color: ksi-color('text-dark');
 }
 
+code{
+  white-space: pre-wrap;
+}
+
 .org-caption {
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
