--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -6,7 +6,7 @@
 		<div class="row flex-row-md stickycolumn-parent">
 			<!-- vysvetlivky -->
 			<div class="col-sm-12 col-md-1">
-				<div id="graph-info-panel" class="panel panel-ksi stickycolumn">
+				<div id="graph-info-panel" class="panel panel-ksi stickycolumn" style="width:220px">
 				  <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
 				  <div class="panel-body">
 						<h5 align="center">Uzly</h5>
@@ -16,14 +16,14 @@
 						<img src="img/nodes/base/node-orange.svg" class="node-info"/>Teoretická úloha<br>
 						<img src="img/nodes/base/node-bronze-unknown.svg" class="node-info"/>Úloha s překvapením<br>
 						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Smíšená úloha<br>
-						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velká úloha<br><!--TODO-->
+						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velká úloha<br>
 						<hr>
 						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčená úloha<br>
 						<img src="img/nodes/base/node-done-icon.svg" class="node-info"/>Opravená úloha<br>
 						<img src="img/nodes/base/node-correcting-icon.svg" class="node-info"/>Neopravená úloha<br>
 						<hr>
 						<h5 align="center">Hrany</h5>
-						Pro odemčení úlohy musíte mít odemčené všechny hrany stejné barvy směrující do ní.
+						<p align="left">Pro odemčení úlohy musíte mít odemčené všechny hrany stejné barvy směrující do ní.</p>
 				  </div>
 				</div>
 			</div>
