--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -33,11 +33,11 @@
     {{#if script_text_output}}
         <div class="row" style="margin-top:20px; margin-left:0px; margin-right:20px">
             <label>Výstup kódu</label>
-            {{textarea class="form-control" style="min-width: 100%;" rows="3" readonly="true" value=script_text_output}}
+            {{textarea class="form-control" style="min-width: 100%;" rows="10" readonly="true" value=script_text_output}}
         </div>
     {{/if}}
     {{#if script_graphics_output}}
-        <div class="row">
+        <div class="row" style="margin-top:20px; margin-left:0px; margin-right:20px">
             <label>Grafický výstup</label><br>
             <div style="align: center;">
                 <img src="{{script_graphics_output}}" style="display:block; margin: auto; border-radius: 5px; border:1px solid black; width:100%; max-width:800px;"/>
