--- a/app/templates/components/text-module.hbs
+++ b/app/templates/components/text-module.hbs
@@ -6,10 +6,8 @@
 	  <div class="form-group">
 	  	{{#each inputs as |val index|}}
 	    <div class="col-sm-12 row">
-	    	<div class="col-sm-3 row">
-		    	<label for="inputSolution" class="col-sm-1 control-label">Odpověď {{val}}: </label>
-		    </div>
-	    	<div class="col-sm-9 row">
+		    	<label for="inputSolution" class="col-sm-2 control-label">Odpověď {{val}}: </label>
+	    	<div class="col-sm-10">
 	      		{{input type="text" class="form-control" id=(construct-id module.id index)}}
 	      	</div>
 	    </div>
