About KSI text corrections.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
 	<h2 id="about">O KSI</h2>
-	<p>KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro středoškoláky z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a&nbsp;logické myšlení.
+	<p>KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro středoškoláky z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
     Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
     </p>
 
@@ -8,7 +8,7 @@
 	<h3>Jak seminář probíhá?</h3>
 	<p>
     Středobodem semináře je graf úloh, který se snažíš projít a&nbsp;po cestě vyřešit co nejvíce úloh zvládneš.
-    Některé části grafu představují základní myšlenky, pojmy a postupy a&nbsp;obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
+    Některé části grafu představují základní myšlenky, pojmy a&nbsp;postupy a&nbsp;obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
     Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a&nbsp;sepsání máš zhruba jeden měsíc.
     Po termínu odevzdání se úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a&nbsp;zveřejníme vzorové řešení úlohy.
     Soutěžní úlohy jsou pak různého charakteru a&nbsp;zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i&nbsp;ostřílený řešitel programátorských soutěží.
