--- a/app/templates/components/orgs-list.hbs
+++ b/app/templates/components/orgs-list.hbs
@@ -1,5 +1,5 @@
 {{#each model as |org index|}}
-    <div class="col-xs-6 col-md-3" style="margin:20px text-align:center;">
+    <div class="col-xs-6 col-md-3" style="text-align:center;">
       {{#link-to "user-profile" org}}
           <img src="{{org.profile_picture_r}}" style="
             width: 100%;
