--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -8,6 +8,7 @@
       </div>
       <div class="panel-body panel-body-article">
         <div class="row" style="margin-top: 10px">
+            {{date-and-time model.time_published 'cs'}}
             {{{model.body}}}
         </div>
       </div>
