zagulatene rohy fotiek a o ksi v bloku

--- a/app/templates/components/orgs-list.hbs
+++ b/app/templates/components/orgs-list.hbs
@@ -2,6 +2,7 @@
     <div class="col-xs-6 col-md-3" style="text-align:center;">
       {{#link-to "user-profile" org}}
           <img src="{{org.profile_picture_r}}" style="
+            border-radius: 25px;
             width: 100%;
             margin: 0 auto;
             overflow:hidden;
