--- a/app/styles/layout/login.scss
+++ b/app/styles/layout/login.scss
@@ -21,7 +21,7 @@
   position: relative;
 }
 
-.loginmodal-container input[type=text], input[type=password] {
+.loginmodal-container input[type=email], input[type=password] {
   height: 44px;
   font-size: 16px;
   width: 100%;
@@ -36,7 +36,7 @@
   -moz-box-sizing: border-box;
 }
 
-.loginmodal-container input[type=text]:hover, input[type=password]:hover {
+.loginmodal-container input[type=email]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
   -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
