--- a/app/styles/layout/navbar-main.scss
+++ b/app/styles/layout/navbar-main.scss
@@ -1,3 +1,8 @@
+.dropdown-toggle:active, .open .dropdown-toggle {
+  background-color: ksi-color('primary-orange') !important;
+	color: ksi-color('text-light') !important;
+}
+
 .navbar-trans {
   background-color: ksi-color('primary-dark');
   color: ksi-color('text-light');
