--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -38,7 +38,7 @@
             <ul class="nav navbar-nav navbar-right">
               {{#if session.isAuthenticated}}
                 <li class="dropdown">
-                  <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <a href="javascript:void(0)" class="btn btn-header dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <div style="text-align:center;">
                       <!--<div style="display:inline">
                           <img src="{{session.current_user.profile_pic}}" style="margin:0width:53px;"/>
