KSI is just for high-school students.

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -4,6 +4,7 @@
   {{else}}
   {{#validatable-form action="register" model=model}}
 	<div class="jumbotron" style="background-color: transparent">
+        <div class="alert alert-warning" role="alert">Soutěž je určena pouze pro studenty středních škol.</div> 
 	    <h2>Registrace</h2>
 			<div style="margin-top:30px">
 				<h4>Přihlašovací údaje</h4>
