--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,37 +1,37 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
-	<h2 id="about">O KSI</h2>
-	<p align="justify">KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro středoškoláky z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
+    <h2 id="about">O KSI</h2>
+    <p align="justify">KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro studenty středních škol z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
     Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
     </p>
 
 
-	<h3>Jak seminář probíhá?</h3>
-	<p align="justify">
+    <h3>Jak seminář probíhá?</h3>
+    <p align="justify">
     Středobodem semináře je graf úloh, který se snažíš projít a&nbsp;po cestě vyřešit co nejvíce úloh zvládneš.
     Některé části grafu představují základní myšlenky, pojmy a&nbsp;postupy a&nbsp;obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
     Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a&nbsp;sepsání máš zhruba jeden měsíc.
     Po termínu odevzdání se úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a&nbsp;zveřejníme vzorové řešení úlohy.
     Soutěžní úlohy jsou pak různého charakteru a&nbsp;zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i&nbsp;ostřílený řešitel programátorských soutěží.
     </p>
-	<p align="justify">
+    <p align="justify">
     S&nbsp;ostatními účastníky i&nbsp;organizátory semináře se můžeš potkat na několika výletech.
     Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na týdenní soustředění K-SCUK.
     Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
     </p>
 
-	<h3>Jaké úlohy mám očekávat?</h3>
-	<p align="justify">
+    <h3>Jaké úlohy mám očekávat?</h3>
+    <p align="justify">
     Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému.
     Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i&nbsp;program v&nbsp;Pythonu.
     Pokud programovat neumíš nebo programuješ v&nbsp;jiném jazyce, nemusíš se ničeho bát.
     Python tě pomocí cvičných příkladů rychle naučíme.
     Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)
     </p>
-	<p align="justify">Některé z&nbsp;našich úloh mohou být složité nebo pracné, i&nbsp;když s&nbsp;dobrým nápadem se většinou dají vyřešit rychle a&nbsp;elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a&nbsp;zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I&nbsp;pokud máš jen nějaké nápady co s&nbsp;ní, napiš nám je a&nbsp;my tvoji snahu určitě oceníme.</p>
+    <p align="justify">Některé z&nbsp;našich úloh mohou být složité nebo pracné, i&nbsp;když s&nbsp;dobrým nápadem se většinou dají vyřešit rychle a&nbsp;elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a&nbsp;zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I&nbsp;pokud máš jen nějaké nápady co s&nbsp;ní, napiš nám je a&nbsp;my tvoji snahu určitě oceníme.</p>
 
-	<h3>Proč se účastnit?</h3>
-	<ul>
-	<li><p align="justify">Procvičíš si programátorské, matematické a&nbsp;logické myšlení a&nbsp;schopnost řešit nelehké problémy s&nbsp;využitím počítače. Získáš nové znalosti a&nbsp;naučíš se algoritmy běžně používané v&nbsp;každodenní programátorské praxi.</p></li>
+    <h3>Proč se účastnit?</h3>
+    <ul>
+    <li><p align="justify">Procvičíš si programátorské, matematické a&nbsp;logické myšlení a&nbsp;schopnost řešit nelehké problémy s&nbsp;využitím počítače. Získáš nové znalosti a&nbsp;naučíš se algoritmy běžně používané v&nbsp;každodenní programátorské praxi.</p></li>
 
     <li><p align="justify">Naučíš se své myšlenky jasně formulovat a&nbsp;srozumitelně vyjadřovat.</p></li>
 
@@ -39,41 +39,41 @@
 
     <li><p align="justify">Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a&nbsp;pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
 
-		<li><p align="justify">Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
+        <li><p align="justify">Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
 
     <li><p align="justify">A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě týdenního soustředění.</p></li>
 
-	</ul>
+    </ul>
 
   <h2 id="faq">FAQ</h2>
   <!--<p id="date-text">Publikováno 4.8.2015</p>-->
 
-	<div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v&nbsp;slovenčine?</div>
-	  <div class="panel-body">
-	    A: Jistě. V&nbsp;organizátorském týmu máme dokonce několik Slováků, takže se slovenština občas objeví i&nbsp;v&nbsp;zadání.
-	  </div>
-	</div>
+    <div class="panel panel-ksi">
+      <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v&nbsp;slovenčine?</div>
+      <div class="panel-body">
+        A: Jistě. V&nbsp;organizátorském týmu máme dokonce několik Slováků, takže se slovenština občas objeví i&nbsp;v&nbsp;zadání.
+      </div>
+    </div>
 
-	<div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
-	  <div class="panel-body">
-	    A: Každý, kdo dosáhne alespoň 60&nbsp;% celkového počtu bodů.
-	  </div>
-	</div>
+    <div class="panel panel-ksi">
+      <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
+      <div class="panel-body">
+        A: Student střední školy, který dosáhne alespoň 60&nbsp;% celkového počtu bodů.
+      </div>
+    </div>
 
-	<div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o&nbsp;semináři pozdě, první vlna už proběhla. Je možné se ještě přihlásit do semináře?</div>
-	  <div class="panel-body">
-	    A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá šance stát se úspěšným řešitelem.
-	  </div>
-	</div>
+    <div class="panel panel-ksi">
+      <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o&nbsp;semináři pozdě, první vlna už proběhla. Je možné se ještě přihlásit do semináře?</div>
+      <div class="panel-body">
+        A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá šance stát se úspěšným řešitelem.
+      </div>
+    </div>
 
-	<div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI např. v&nbsp;2.&nbsp;ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
-	  <div class="panel-body">
-	    A: Ano, pokud jsi úspěšný řešitel semináře v&nbsp;kterémkoli roce a&nbsp;budeš se po maturitě hlásit na FI, budeš přijat.
-	  </div>
-	</div>
-	<p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
+    <div class="panel panel-ksi">
+      <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI např. v&nbsp;2.&nbsp;ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
+      <div class="panel-body">
+        A: Pravděpodobně ano, aktuální a oficiální informace naleznete na <a href="https://www.fi.muni.cz/admission/bachelor/index.xhtml.cs">oficiálních stránkách Fakulty informatiky MU</a>.
+      </div>
+    </div>
+    <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
 </section>
