--- a/app/templates/error.hbs
+++ b/app/templates/error.hbs
@@ -1,4 +1,4 @@
 <section class="container content-section" style="text-align:justify; margin-top: 40px;height:500px;">
-	<h1>Něco se rozbilo...</h1>
+	<h1>Něco se rozbilo... Ale neboj, naše cvičené opičky to určitě už spravují!</h1>
 	{{model}}
 </section>
