--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -4,22 +4,17 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-12">
-                    <h3>Odkazy</h3>
-                    <table align="center">
-                      <tr>
-                        <td><a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo" id="mail-logo"></a></td>
-                        <td><a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo" id="facebook-logo"></a></td>
-                        <td><a href="https://www.youtube.com/channel/UC_Sq9u4KZe6oGzPN3zsMa8A" title="YouTube" class="footer-logo" id="youtube-logo"></a></td>
-
-                        <td><a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo" id="mu-logo"></a></td>
-                        <td><a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo" id="fi-logo"></a></td>
-
-                        <td><a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo" id="brkos-logo"></a></td>
-                        <td><a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo" id="keks-logo"></a></td>
-                        <td><a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo" id="los-logo"></a></td>
-                        <td><a href="http://intersob.math.muni.cz/" title=" INTERdisiplinárně Soběstačný OBčan" class="footer-logo" id="sob-logo"></a></td>
-                      </tr>
-                    </table>
+                      <div style="text-align: center; color: #fff; margin-top:-10px"><h3>Odkazy</h3></div>
+                      <div class="row row-centered">
+                        <a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo inline-footer" id="mail-logo"></a>
+                        <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
+                        <a href="https://www.youtube.com/channel/UC_Sq9u4KZe6oGzPN3zsMa8A" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
+                        <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
+                        <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
+                        <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
+                        <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
+                        <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
+                      </div>
                 </div>
             </div>
         </div>
