--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -2,7 +2,7 @@
     <div class="panel panel-article" style="margin-top:20px">
       <div class="panel-heading panel-heading-article">
         <h1 id="name">
-          <img src={{model.picture}} style="width: 70px">
+          <img src={{model.picture}} style="width: 120px; border-radius: 25px;">
           {{model.title}}
         </h1>
       </div>
