Fix kscuk link href.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -38,7 +38,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <a href="http://ksi.fi.muni.cz/kscuk/">
+            <a href="http://kscuk.fi.muni.cz/">
               <img src="img/info-kscuk.svg" style="max-width:90%;"/>
             </a>
             <p class="about-paragraph" style="font-size:18px;" align="justify">
