--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -3,7 +3,7 @@
         <img class="media-object" src="{{model.author.profile_picture_r}}" style="width:50px; border-radius: 5px;"> <!-- foto autora prispevku -->
     </div>
     <div class="media-body">
-      <div class="discussion-caption">{{model.author.full_name}}, {{if model.author.is_organisator "organizátor" "řešitel"}}, {{date-and-time model.published_at 'cs'}}{{if model.is_new ", nové"}}</div> <!-- meno, status, cas-->
+      <div class="discussion-caption">{{model.author.full_name}}, {{model.author.role_str}}, {{date-and-time model.published_at 'cs'}}{{if model.is_new ", nové"}}</div> <!-- meno, status, cas-->
         {{{model.body}}}
       <div>
         <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "react"}}>
@@ -28,8 +28,8 @@
                   <label for="threadName">Příspěvek:</label>
                   {{text-editor value=response_text}}
               </div>
-      				<button class="btn btn-sm btn-primary" style="margin-top:20px" {{action "send"}}>Odeslat</button>
-      		</div>
+                    <button class="btn btn-sm btn-primary" style="margin-top:20px" {{action "send"}}>Odeslat</button>
+            </div>
         {{/unless}}
       {{/if}}
       <!-- vnorena reakcia -->
