--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -1,9 +1,9 @@
 <li class="media" style="margin-top: 15px"> <!-- pociatok prispevku -->
     <div class="media-left" >
-        <img class="media-object" src="{{model.author.profile_picture_r}}" style="width:50px; border-radius: 5px;"> <!-- foto autora prispevku -->
+        {{#link-to "user-profile" model.author}}<img class="media-object" src="{{model.author.profile_picture_r}}" style="width:50px; border-radius: 5px;">{{/link-to}} <!-- foto autora prispevku -->
     </div>
     <div class="media-body">
-      <div class="discussion-caption">{{model.author.full_name}}, {{model.author.role_str}}, {{date-and-time model.published_at 'cs'}}{{if model.is_new ", nové"}}</div> <!-- meno, status, cas-->
+      <div class="discussion-caption">{{#link-to "user-profile" model.author}}{{model.author.full_name}}{{/link-to}}, {{model.author.role_str}}, {{date-and-time model.published_at 'cs'}}{{if model.is_new ", nové"}}</div> <!-- meno, status, cas-->
         {{{model.body}}}
       <div>
         <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "react"}}>
