--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -33,7 +33,7 @@
 			<div class="panel panel-profile">
 				<div class="panel-body">
 					{{#each model.achievements as |achievement|}}
-					{{achievement-small model=achievement}}
+					{{#link-to 'achievements'}}{{achievement-small model=achievement}}{{/link-to}}
 					{{/each}}
 				</div>
 			</div>
@@ -119,7 +119,7 @@
 							</div>
 							<div class="col-xs-4">
 								{{#each result.achievements as |achievement|}}
-									{{achievement-small model=achievement}}
+									{{#link-to 'achievements'}}{{achievement-small model=achievement}}{{/link-to}}
 								{{/each}}
 							</div>
 							<div class="col-xs-2">
