--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -21,7 +21,7 @@
         <div class="panel panel-achievements">
           <div class="panel-body">
             {{#each model.details.achievements as |achievement|}}
-                  {{achievement-small model=achievement}}
+                  {{#link-to 'achievements'}}{{achievement-small model=achievement}}{{/link-to}}
                 {{/each}}
           </div>
         </div>
