--- a/app/templates/task/statistics.hbs
+++ b/app/templates/task/statistics.hbs
@@ -14,7 +14,7 @@
       <td>{{#link-to "user-profile" score.user}}{{score.user.full_name}}{{/link-to}}</td>
       <td>
         {{#each score.achievements as |achievement|}}
-          {{achievement-small model=achievement}}
+          {{#link-to 'achievements'}}{{achievement-small model=achievement}}{{/link-to}}
         {{/each}}
       </td>
       <td style="text-align: center;">{{score.score}}</td> <!-- body -->
