--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -9,6 +9,8 @@
         <img src="{{trophy.picture}}" width="200px;"/>
         <p id="profile-text">{{trophy.title}}</p>
       </div>
+    {{else}}
+        <p>V tomto ročníku KSI zatím nejsou žádné trofeje.</p>
     {{/each}}
   </div>
 </section>
