KSI is also for grammar-school students.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
     <h2 id="about">O KSI</h2>
-    <p align="justify">KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro studenty středních škol z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
+    <p align="justify">KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro studenty středních škol a&nbsp;víceletých gymnázií z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
     Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
     </p>
 
