--- a/app/templates/components/submitted-file.hbs
+++ b/app/templates/components/submitted-file.hbs
@@ -1,1 +1,1 @@
-<li><a href="{{file.filepath}}">{{file.filename}}</a> – <a href="javascript:void()" {{action "del"}}>{{if active "Smazat" "Mažu"}}</a></li>
+<li><a href="javascript:void()" {{action "down"}}>{{file.filename}}</a> – <a href="javascript:void()" {{action "del"}}>{{if active "Smazat" "Mažu"}}</a></li>
