Change way achievement picture file is passed to frontend.

--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -6,7 +6,7 @@
   <div class="row" style="margin-bottom:10px" align="center">
     {{#each model as |trophy|}}
       <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
-        <img src="{{trophy.picture}}" width="200px;"/>
+        <img src="{{trophy.picture_r}}" width="200px;"/>
         <p id="profile-text">{{trophy.title}}</p>
       </div>
     {{else}}
