--- a/app/templates/components/achievement-small.hbs
+++ b/app/templates/components/achievement-small.hbs
@@ -1,1 +1,1 @@
-<img src="{{model.picture}}" width="30px;" alt="{{model.title}}">
+<img src="{{model.picture_r}}" width="30px;" alt="{{model.title}}">
