Implement file-module advanced functions

--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -11,7 +11,7 @@
 </ul>
 <div class="alert alert-warning" role="alert" style="margin-left:0px; margin-top:20px">
     <!-- TODO color poznamky -->
-    <strong>Poznámka:</strong> Odevzdat můžete i více různých souborů naráz, stačí je vybrat. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
+    <strong>Poznámka:</strong> Soubory můžete odevzávat postupně (s novým odevzdání přibudou soubory a staré nezmizí) <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
 </div>
 <div style="margin-left:0px">
     <h5>Soubory k odevzdání:</h5>
