--- a/app/templates/components/articles-list.hbs
+++ b/app/templates/components/articles-list.hbs
@@ -1,5 +1,5 @@
 {{#each model as |article|}}
-    <div class="row" style="margin-top:20px;margin: 0 auto;">
+    <div class="row" style="margin: 20px auto 0 auto;">
       <div class="col-xs-12 col-sm-3">
         <div class="hidden-xs">
           <img src="{{article.picture}}" style="width: 100%; border-radius: 25px;" align="center">
