--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -19,7 +19,7 @@
         <span class="glyphicon glyphicon-open" aria-hidden="true"></span>
         <span>Vybrat soubory</span>
     </div>
-    {{file-input multiple=true class="upload" endpoint=endpoint id=(construct-id "upload" module.id) file_list="file_list" status="status" upload_finished="upload_finished" upload_failed="upload_failed" actionReceiver=f_input}}
+    {{file-input multiple=true class="upload" endpoint=endpoint id=(construct-id "upload" module.id) file_list="file_list" status="status" upload_finished="upload_finished" upload_failed="upload_failed" progress="progress" actionReceiver=f_input}}
     {{#if files}}
         <br>
         Vybrané soubory:
@@ -28,6 +28,11 @@
                 <li>{{file}}</li>
             {{/each}}
         </ul>
+    {{/if}}
+    {{#if in_progress}}
+        <div style="margin-top:20px">
+            {{info-general text=progress_msg}}
+        </div>
     {{/if}}
     {{#if general_error}}
         <div style="margin-top:20px">
