--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -7,7 +7,7 @@
 			<h5>Výsledek:</h5>
 			<ul class="sortable list" id="sortable{{module.id}}a" style="min-height: 100px; min-width:50%;">
 				{{#each module.sortable_list.fixed as |line index|}}
-					<li draggable="true" class="{{line.style}} static" id="a{{index}}" data-offset="{{line.offset}}">{{line.content}}</li>
+					<li draggable="true" class="{{line.style}} static" id="a{{index}}" data-offset="{{line.offset}}">{{{line.content}}}</li>
 				{{/each}}
 			</ul>
 		</div>
@@ -15,7 +15,7 @@
 			<h5>Použij tyto řádky:</h5>
 			<ul class="sortable list" id="sortable{{module.id}}b" style="min-height: 100px; min-width:50%;">
 				{{#each module.sortable_list.movable as |line index|}}
-					<li draggable="true" class="{{line.style}} highlight" id="b{{index}}" data-offset="{{line.offset}}">{{line.content}}</li>
+					<li draggable="true" class="{{line.style}} highlight" id="b{{index}}" data-offset="{{line.offset}}">{{{line.content}}}</li>
 				{{/each}}
 			</ul>
 		</div>
