--- a/app/templates/error.hbs
+++ b/app/templates/error.hbs
@@ -1,4 +1,5 @@
 <section class="container content-section" style="text-align:justify; margin-top: 40px;height:500px;">
-	<h1>Něco se rozbilo... Ale neboj, naše cvičené opičky to určitě už spravují!</h1>
+	<h1>Něco se rozbilo...</h1>
+	<p>Informuj prosím orgy pomocí zpětné vazby nebo e-mailu na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>, opravíme to.<br>Díky!</p>
 	{{model}}
 </section>
