--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -11,23 +11,25 @@
   <div class="panel-body">
     {{#if show}}
       {{#if module.is_programming}}
-        {{code-module module=module store=store id=module.id submit_done="submit_done" actionReceiver=module_logic}}
+        {{code-module module=module store=store id=module.id submit_done="submit_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_quiz}}
-        {{quiz-module module=module store=store submit_done="submit_done" actionReceiver=module_logic}}
+        {{quiz-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_general}}
-        {{file-module module=module store=store submit_done="submit_done" actionReceiver=module_logic}}
+        {{file-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_sortable}}
-        {{sortable-module module=module store=store submit_done="submit_done" actionReceiver=module_logic}}
+        {{sortable-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_text}}
-        {{text-module module=module store=store submit_done="submit_done" actionReceiver=module_logic}}
+        {{text-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
     {{/if}}
+    {{#if opened}}
     <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "trigger"}}>
       {{#if show}} Odevzdat {{else}} Zkusit odevzdat znovu {{/if}}
     </button>
+    {{/if}}
   </div>
 </div>
